# touchless

./: .gitignore  README.md  index.html  package.json
public/: gesture_classifier_right.tflite  labels.json
public/models/: gesture_classifier_left.tflite
public/tfjs/: tflite_web_api_cc_simd.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: HandResult.vue  NavBar.vue
src/router/: index.ts
src/scripts/: engine.ts  executor.ts  gesture_classifier.ts  gesture_parser.ts
src/stores/: debug_view.ts  engine_state.ts  hand_result.ts
src/utils/: algo.ts  draw.ts  queue.ts
src/views/: AboutView.vue  CustomizeView.vue  DebugView.vue  Experimental.vue  HomeView.vue
